src/test/deca/syntax/invalid/custom/missing_semi.deca
// Description:
//    tests de programme incorrect lexicalement (point-vrigule manquant)
//
// Resultats:
//    ligne 11 : Erreur, point-virgule manquant (sur fin de fichier)
//
// Historique:
//    cree le 06/01/2022

{
    println("Hello world")
}
